# ComuFrame

./: .gitmodules  CMakeLists.txt  Config.xml
Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ComuFrame.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tests.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Builds/ComuFrame/: ComuFrame.vcxproj  ComuFrame.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Builds/ExternalLib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Builds/ExternalLib/Catch2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Catch2.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Builds/ExternalLib/Catch2/src/: Catch2.vcxproj  Catch2.vcxproj.filters  Catch2WithMain.vcxproj  Catch2WithMain.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Builds/ExternalLib/jsoncons/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jsoncons.sln  jsonconsConfig.cmake  jsonconsConfigVersion.cmake  jsonconsTargets.cmake
Builds/ExternalLib/jsoncons/test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unit_tests.vcxproj  unit_tests.vcxproj.filters
Builds/ExternalLib/libzmq/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZeroMQ.sln  ZeroMQTargets.cmake  benchmark_radix_tree.vcxproj  benchmark_radix_tree.vcxproj.filters  clang-format-check.sh  clang-format-check.vcxproj  clang-format-check.vcxproj.filters  clang-format-diff.vcxproj  clang-format-diff.vcxproj.filters  clang-format.vcxproj  clang-format.vcxproj.filters  cmake_install.cmake  inproc_lat.vcxproj  inproc_lat.vcxproj.filters  inproc_thr.vcxproj  inproc_thr.vcxproj.filters  libzmq-static.vcxproj  libzmq-static.vcxproj.filters  libzmq.pc  libzmq.vcxproj  libzmq.vcxproj.filters  local_lat.vcxproj  local_lat.vcxproj.filters  local_thr.vcxproj  local_thr.vcxproj.filters  platform.hpp  (+6 more)
Builds/ExternalLib/libzmq/tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_ancillaries.vcxproj  test_ancillaries.vcxproj.filters  test_app_meta.vcxproj  test_app_meta.vcxproj.filters  test_atomics.vcxproj  test_atomics.vcxproj.filters  test_base85.vcxproj  test_base85.vcxproj.filters  test_bind_after_connect_tcp.vcxproj  test_bind_after_connect_tcp.vcxproj.filters  test_bind_src_address.vcxproj  test_bind_src_address.vcxproj.filters  test_capabilities.vcxproj  test_capabilities.vcxproj.filters  test_channel.vcxproj  test_channel.vcxproj.filters  test_client_server.vcxproj  test_client_server.vcxproj.filters  test_conflate.vcxproj  test_conflate.vcxproj.filters  test_connect_resolve.vcxproj  test_connect_resolve.vcxproj.filters  test_connect_rid.vcxproj  test_connect_rid.vcxproj.filters  test_ctx_destroy.vcxproj  test_ctx_destroy.vcxproj.filters  test_ctx_options.vcxproj  test_ctx_options.vcxproj.filters  test_dgram.vcxproj  test_dgram.vcxproj.filters  (+162 more)
Builds/ExternalLib/libzmq/unittests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  unittest_curve_encoding.vcxproj  unittest_curve_encoding.vcxproj.filters  unittest_ip_resolver.vcxproj  unittest_ip_resolver.vcxproj.filters  (+10 more)
Builds/ExternalLib/tinyxml2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  tinyxml2.pc  tinyxml2.pc.gen  tinyxml2.sln  tinyxml2.vcxproj  tinyxml2.vcxproj.filters  xmltest.vcxproj  xmltest.vcxproj.filters
Builds/ExternalLib/yaml-cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  YAML_CPP.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters  yaml-cpp.pc  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
Builds/Testing/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LaunchCentral.vcxproj  LaunchCentral.vcxproj.filters  LaunchNode.vcxproj  LaunchNode.vcxproj.filters  cmake_install.cmake
Builds/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LaunchCentral.vcxproj  LaunchCentral.vcxproj.filters  LaunchNode.vcxproj  LaunchNode.vcxproj.filters  Tests.vcxproj  Tests.vcxproj.filters  cmake_install.cmake
ComuFrame/: CMakeLists.txt  Central.cpp  Central.h  ComuFrame.cpp  ComuFrame.h  DataBase.cpp  DataBase.h  DataNode.cpp  DataNode.h  Node.cpp  Node.h  fsm.cpp  fsm.h  utils.cpp  utils.h
Config/: Central.yaml  NodeTest1.yaml  NodeTest2.yaml
ExternalLib/: CMakeLists.txt
ExternalLib/libzmq/: CMakeCache.txt
Testing/: CMakeLists.txt  LaunchCentral.cpp  LaunchNode.cpp
tests/: CMakeLists.txt  CentralTest.cpp  DataBaseTest.cpp  DataNodeTest.cpp  FsmTest.cpp  LaunchCentral.cpp  LaunchNode.cpp  NodeRegistrationTest.cpp  NodeTest.cpp
(+9 files in other folders)
